lab3/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: frontend-service
spec:
  selector:
    app: lab3deployment  # имя приложения, которое будет привязано к подам
  ports:
    - protocol: TCP
      port: 3000          # Порт, на котором будет доступен сервис
      targetPort: 3000     # Порт, на котором приложение слушает
  type: ClusterIP
